# shellex

./: Cargo.toml  LICENSE  README.md  SHELLEX-LITE.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-05-shellex-implementation.md
docs/superpowers/specs/: 2026-04-05-shellex-design.md
lite/bash/: shellex-lite.bash
lite/fish/: _ollama.fish  ai.fish  diagnose.fish  eli5.fish  fixtypo.fish  gitm.fish  how.fish  jqq.fish  manq.fish  portwtf.fish  rename-files.fish  rx.fish  sx.fish  tldr.fish  wtf.fish
src/: cli.rs  config.rs  context.rs  explain.rs  interactive.rs  main.rs  ollama.rs  prompt.rs  safety.rs
tests/: cli_test.rs  ollama_test.rs
